prevent wrapping of documentation link

--- a/css/styles.less
+++ b/css/styles.less
@@ -178,6 +178,8 @@ ul.docs-sidenav{
 				font-size: 20px;
 				vertical-align: middle;
 
+				white-space: nowrap;
+
 				i{
 					font-size: .9em;
 				}
